kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mona-matti
  labels:
    app: mona-matti

spec:
  replicas: 2

  selector:
    matchLabels:
      app: mona-matti

  template:
    metadata:
      labels:
        app: mona-matti

    spec:
      containers:
        - name: mona-matti
          image: anshadin4k/mona-matti:latest
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
