kustomize/base/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mona-matti-mysql
  labels:
    app: mona-matti-mysql

spec:
  type: ClusterIP

  selector:
    app: mona-matti-mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
