kustomize/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mona-matti
  labels:
    app: mona-matti

spec:
  type: ClusterIP

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

  selector:
    app: mona-matti
