kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mona-matti
  labels:
    app: mona-matti

spec:
  ingressClassName: nginx

  rules:
    - host: mona-matti.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mona-matti
                port:
                  number: 8080
